[package]
name = "rust_webapi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
reqwest = {version = "0.11.14", features = ["blocking", "json"]} 
serde = { version = "1.0.152", features = ["derive"] }
serde_derive = "1.0.152"
tokio = { version = "1.24.2", features = ["full"] }

